matching swagger/avro
