# app/bindings/api/v0/bindings/agent.rb
@@ -14,15 +14,26 @@ require 'date'
 
 module Api::V0::Bindings
   class Agent
-    # The name of the actor.
+    attr_accessor :object_type
+
     attr_accessor :name
+
+    attr_accessor :mbox
+
+    attr_accessor :mbox_sha1sum
+
+    attr_accessor :openid
 
     attr_accessor :account
 
     # Attribute mapping from ruby-style variable name to JSON key.
     def self.attribute_map
       {
+        :'object_type' => :'objectType',
         :'name' => :'name',
+        :'mbox' => :'mbox',
+        :'mbox_sha1sum' => :'mbox_sha1sum',
+        :'openid' => :'openid',
         :'account' => :'account'
       }
     end
@@ -30,8 +41,12 @@ module Api::V0::Bindings
     # Attribute type mapping.
     def self.swagger_types
       {
+        :'object_type' => :'String',
         :'name' => :'String',
-        :'account' => :'AgentAccount'
+        :'mbox' => :'String',
+        :'mbox_sha1sum' => :'String',
+        :'openid' => :'String',
+        :'account' => :'Account'
       }
     end
 
@@ -43,8 +58,24 @@ module Api::V0::Bindings
       # convert string to symbol for hash key
       attributes = attributes.each_with_object({}) { |(k, v), h| h[k.to_sym] = v }
 
+      if attributes.has_key?(:'objectType')
+        self.object_type = attributes[:'objectType']
+      end
+
       if attributes.has_key?(:'name')
         self.name = attributes[:'name']
+      end
+
+      if attributes.has_key?(:'mbox')
+        self.mbox = attributes[:'mbox']
+      end
+
+      if attributes.has_key?(:'mbox_sha1sum')
+        self.mbox_sha1sum = attributes[:'mbox_sha1sum']
+      end
+
+      if attributes.has_key?(:'openid')
+        self.openid = attributes[:'openid']
       end
 
       if attributes.has_key?(:'account')
@@ -56,8 +87,8 @@ module Api::V0::Bindings
     # @return Array for valid properties with the reasons
     def list_invalid_properties
       invalid_properties = Array.new
-      if @name.nil?
-        invalid_properties.push('invalid value for "name", name cannot be nil.')
+      if @object_type.nil?
+        invalid_properties.push('invalid value for "object_type", object_type cannot be nil.')
       end
 
       invalid_properties
@@ -66,7 +97,7 @@ module Api::V0::Bindings
     # Check to see if the all the properties in the model are valid
     # @return true if the model is valid
     def valid?
-      return false if @name.nil?
+      return false if @object_type.nil?
       true
     end
 
@@ -75,7 +106,11 @@ module Api::V0::Bindings
     def ==(o)
       return true if self.equal?(o)
       self.class == o.class &&
+          object_type == o.object_type &&
           name == o.name &&
+          mbox == o.mbox &&
+          mbox_sha1sum == o.mbox_sha1sum &&
+          openid == o.openid &&
           account == o.account
     end
 
@@ -88,7 +123,7 @@ module Api::V0::Bindings
     # Calculates hash code according to all attributes.
     # @return [Fixnum] Hash code
     def hash
-      [name, account].hash
+      [object_type, name, mbox, mbox_sha1sum, openid, account].hash
     end
 
     # Builds the object from hash
